--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -155,7 +155,7 @@
             .map-widget{
                 &.style-2{
                     @media only screen and (min-width: 0px) and (max-width: 768px){
-                        padding: 30px 30px 0 30px;
+                        padding-top: 30px;
                     }
                 }
             }
